--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,14 @@
 {
   "statusCheckNames": {
     "configValidation": "custom-string"
-  }
+  },
+  "regexManagers": [
+    {
+      "fileMatch": ["config/options/index.ts"],
+      "matchStrings": [
+        "default: '(?<depName>ghcr.io/containerbase/sidecar):(?<currentValue>.*)'"
+      ],
+      "datasourceTemplate": "docker"
+    }
+  ]
 }
